packages/unigraph-dev-explorer/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none;  /* Firefox */

}

::-webkit-scrollbar { 
  display: none;  /* Safari and Chrome */
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* Global styles properties */
span.wikilink:hover {
  text-decoration: underline;
}

[contenteditable] {
  -webkit-user-select: text;
  user-select: text;
}

.showOnHover {
  opacity: 0
}

.showOnHover:hover {
  opacity: 1
}

